feat:增加共享池全局开关
